# py-graphics-module

./: .gitignore  CMakeLists.txt  clean.sh  example.py  gl.cpp  makefile  requirements.txt  run.bat  run.sh  test.py
shaders/: cell.example.comp  compute.comp  display.example.frag  screenspace.vert  uv.2D.frag  uv.3D.frag  worldspace.vert
src/: constants.h  doc.h  global.h  graphics.cpp  graphics.h  includes.h  typecast.h  utils.h
